--- a/index.html
+++ b/index.html
@@ -41,25 +41,32 @@
             <form>
                 <input type="text" placeholder="Promo Code">
                 <select>
-                    <option></option>
-                    <option></option>
+                    <option disabled selected>How did you hear about us?</option>
+                    <option value="Item 1">Social media</option>
+                    <option value="Item 2">Advertising</option>
                 </select>
                 <select>
-                    <option></option>
-                    <option value=""></option>
+                    <option disabled selected>Country</option>
+                    <option value="Item 1">Argentina</option>
+                    <option value="Item 2">United States</option>
+                    <option value="Item 3">Uruguay</option>
+                    <option value="Item 4">Brazil</option>
+                    <option value="Item 5">Germany</option>
+                </select>
+                <input type="text" placeholder="Address Line 1">
+                <input type="text" placeholder="Apartment, office, unite">
+                <input type="text" placeholder="City">
+                <select>
+                    <option disabled selected>State</option>
                     <option value=""></option>
                     <option value=""></option>
                     <option value=""></option>
                 </select>
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <option></option>
-                <input type="text">
+                <input type="text" placeholder="Zip Code">
             </form>
 
             <button>Sign up</button>
-            <span>Have an account?</span>
+            <span class="have-account">Have an account?</span>
         </main>
     </div>
 </body>
